# gitprint

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cliff.toml  flake.nix
.claude/: settings.local.json
.claude/commands/: doctest.md
.github/workflows/: ci.yml  cleanup.yml  publish.yml  release.yml
benches/: pipeline.rs
demo/: demo.tape
scripts/: check_benchmarks.py
src/: cli.rs  defaults.rs  error.rs  filter.rs  git.rs  github.rs  highlight.rs  lib.rs  main.rs  preview.rs  types.rs  user_report.rs
src/pdf/: code.rs  cover.rs  diff.rs  fonts.rs  layout.rs  mod.rs  toc.rs  tree.rs  user_activity.rs  user_cover.rs  user_repos.rs
tests/: integration.rs
