[package]
name = "gitprint"
version = "0.1.2"
edition = "2024"
description = "Convert git repositories into beautifully formatted, printer-friendly PDFs"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2"
globset = "0.4"
printpdf = "0.9"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }

[[bench]]
name = "pipeline"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
