[package]
name = "gitprint"
version = "0.3.2"
edition = "2024"
description = "Convert git repositories into beautifully formatted, printer-friendly PDFs"
license = "MIT"
repository = "https://github.com/izelnakri/gitprint"
homepage = "https://github.com/izelnakri/gitprint"
readme = "README.md"
keywords = ["pdf", "git", "syntax-highlighting", "printing", "code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
printpdf = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }

[[bench]]
name = "pipeline"
harness = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
